# Borrex

./: .gitignore  LICENSE  MakeFIle  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 59ffde5f8dec_create_user_table.py  9127e4ae25d7_create_user_table.py  bdd9aab98323_create_rents_table.py
source/: main.py
source/api/dependencies/: auth.py  database.py
source/api/routes/: __init__.py  auth.py  health.py
source/config/settings/: config.py  database.py
source/models/: base_model.py
source/models/db/: __init__.py  item.py  rent.py  user.py
source/models/schemas/: __init__.py  item.py  rent.py  user.py
source/repository/: base_repository.py  item_repository.py  rent_repository.py  user_repository.py
source/security/authorizations/: jwt.py
source/security/hashing/: password.py
source/security/verifications/: token.py
source/services/: auth_service.py  user_service.py
