[project]
name = "borrex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
